fix on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,6 +85,10 @@ li {
 	#splashVideo {
 		display: none;
 	}
+
+	.desktop-only {
+		display: none;
+	}
 }
 
 main {
