--- a/scss/site-header.scss
+++ b/scss/site-header.scss
@@ -38,7 +38,7 @@ header {
 	}
 
 	.taglines {
-		display: block;
+		// display: block;
 		width: auto;
 
 		line-height: 5.2em;
